--- a/inst/compile/buildDyn/DESCRIPTION
+++ b/inst/compile/buildDyn/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: CCxAAAA
 Version: 0.1.0
 Title: CCxAAAA
-Description: pseudo package for comprehensive linking of .so file needed for executing commands
+Description: pseudo package for portable linking of .so file needed for executing commands
 License: MIT
 Encoding: UTF-8
 LazyData: true
