--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,8 @@ License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.10)
 LinkingTo: Rcpp
 RoxygenNote: 7.2.3
+Depends:
+	truncnorm,
+	MASS,
+	devtools,
+  usethis
