clean and fix parser step 2, increased modularity and further generalization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 importFrom(Rcpp, evalCpp)
 importFrom(truncnorm, rtruncnorm)
 importFrom(MASS, mvrnorm)
+importFrom(jsonlite, fromJSON)
 exportPattern("^[[:alpha:]]+")
